# AddiFy

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  example_config.yaml  package-lock.json  schroedingersgithublicense
.github/workflows/: deploy.yml
Classes/: main.cpp  menu.cpp
Include/: menu.h  typedefs.h
docs/: index.md
docs/.vitepress/: config.mts
docs/documentation/: playlist.md
docs/introduction/: Introduction.md  authentication.md  usage.md  viteexamples.md
